--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -18,9 +18,9 @@
 </head>
 <body>
     <header class="site-header">
-        <nav class="navbar navbar-expand-md navbar-dark bg-steel fixed-top">
+        <nav class="navbar navbar-expand-md navbar-dark bg-primary fixed-top">
         <div class="container">
-            <a class="navbar-brand mr-4" href="{% url 'blog-home' %}">Veterinaria</a>
+            <a class="navbar-brand mr-4" href="{% url 'blog-home' %}">El milaneso feliz</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
             </button>
@@ -34,8 +34,12 @@
               {% if user.is_authenticated %}
                 <a class="nav-item nav-link" href="{% url 'logout' %}">Logout</a>
                 <a class="nav-item nav-link" href="{% url 'profile' %}">Profile</a>
+                <a class="nav-item nav-link" href="{% url 'catalogo' %}">Catalogo</a>
+                <a class="nav-item nav-link" href="{% url 'solicitud' %}">Solicitud de adopción</a>
               {% else %}
+                <a class="nav-item nav-link" href="{% url 'solicitud' %}">Solicitud de adopción</a>
                 <a class="nav-item nav-link" href="{% url 'login' %}">Login</a>
+                <a class="nav-item nav-link" href="{% url 'catalogo' %}">Catalogo</a>
                 <a class="nav-item nav-link" href="{% url 'register' %}">Register</a>
               {% endif %}
               </div>
