--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -1,11 +1,6 @@
 {% extends "blog/base.html" %}
 {% block content %}
+<h1>Refugio el milaneso feliz</h1>
 
-<article class="media content-section">
-        <a class="mr-2" href="#">{{ registro.nombre }}</a>
-        <a class="mr-2" href="#">{{ RegistroMascota.alimentacion }}</a>
-    <h2><a class="article-title" href="#">{{ post.title }}</a></h2>
-    <p class="article-content">{{ post.content }}</p>
 
-</article>
 {% endblock content %}
