--- a/users/templates/users/registromascota.html
+++ b/users/templates/users/registromascota.html
@@ -5,7 +5,7 @@
 <form method="POST" enctype="multipart/form-data">
     {% csrf_token %}
     {{ registro.as_p }}
-    <input type="submit" value="Submit">
+    <button type="submit">Upload</button>
 </form>
 
 {% endblock content %}
