--- a/users/templates/users/formulario.html
+++ b/users/templates/users/formulario.html
@@ -7,8 +7,7 @@
     <h1> Formulario de solicitud de adopción </h1>
 
     <form action="/formulario/" method="POST">{% csrf_token %}
-        <p>Nombre: <input type="text" name="Nombre"> </p>
-        <p>Apellidos: <input type="text" name="Apellidos"> </p>
+        <p>Nombre completo: <input type="text" name="Nombre"> </p>
         <p>Edad: <input type="text" name="Edad"> </p>
         <p>Correo electronico: <input type="text" name="Correo"> </p>
         <p>Telefono: <input type="text" name="Telefono"> </p>
