--- a/users/templates/users/register.html
+++ b/users/templates/users/register.html
@@ -24,5 +24,6 @@
              </a>
          </small>
      </div>
+     <p>Si usted ya esta en un proceso de adopción por favor utilizar de username el nombre completo que utilizó en la solicitud.</p>
  </div>
 {% endblock content %}
