--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -32,10 +32,18 @@
             <!-- Navbar Right Side -->
             <div class="navbar-nav">
               {% if user.is_authenticated %}
-                <a class="nav-item nav-link" href="{% url 'logout' %}">Logout</a>
-                <a class="nav-item nav-link" href="{% url 'profile' %}">Profile</a>
-                <a class="nav-item nav-link" href="{% url 'catalogo' %}">Catalogo</a>
-                <a class="nav-item nav-link" href="{% url 'solicitud' %}">Solicitud de adopción</a>
+                {% if user.is_staff %}
+                  <a class="nav-item nav-link" href="{% url 'logout' %}">Logout</a>
+                  <a class="nav-item nav-link" href="{% url 'profile' %}">Profile</a>
+                  <a class="nav-item nav-link" href="{% url 'catalogo' %}">Catalogo</a>
+                  <a class="nav-item nav-link" href="{% url 'solicitud' %}">Solicitud de adopción</a>
+                  <a class="nav-item nav-link" href="{% url 'listado_solicitantes' %}">Listado Solicitantes</a>
+                {% else %}
+                  <a class="nav-item nav-link" href="{% url 'logout' %}">Logout</a>
+                  <a class="nav-item nav-link" href="{% url 'profile' %}">Profile</a>
+                  <a class="nav-item nav-link" href="{% url 'catalogo' %}">Catalogo</a>
+                  <a class="nav-item nav-link" href="{% url 'solicitud' %}">Solicitud de adopción</a>
+                {% endif %}
               {% else %}
                 <a class="nav-item nav-link" href="{% url 'solicitud' %}">Solicitud de adopción</a>
                 <a class="nav-item nav-link" href="{% url 'login' %}">Login</a>
@@ -50,8 +58,8 @@
 
   
     <main role="main" class="container">
-        <div class="row">
-          <div class="col-md-8">
+
+
             {% if messages %}
             {% for message in messages %}
             <div class="alert alert-{{ message.tags}}">
@@ -64,18 +72,6 @@
             
             {% endblock %}
           </div>
-<!---          <div class="col-md-4">
-            <div class="content-section">
-              <h3>Our Sidebar</h3>
-              <p class='text-muted'>Registrar mascota
-                <ul class="list-group">
-                  <li class="list-group-item list-group-item-light">Latest Posts</li>
-                  <li class="list-group-item list-group-item-light">Announcements</li>
-                  <li class="list-group-item list-group-item-light">Calendars</li>
-                  <li class="list-group-item list-group-item-light">etc</li>
-                </ul>
-              </p>
-            </div>-->
           </div>
         </div>
       </main>
