--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -1,6 +1,7 @@
 {% extends "blog/base.html" %}
 {% load crispy_forms_tags %}
 {% block content %}
+<div class="col-md-8">
 <div class="content-section">
     <div class="media">
       <img class="rounded-circle account-img" src="{{user.profile.image.url}}">
