--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -27,16 +27,15 @@
             <div class="collapse navbar-collapse" id="navbarToggle">
             <div class="navbar-nav mr-auto">
                 <a class="nav-item nav-link" href="{% url 'blog-home' %}">Home</a>
-<!---                <a class="nav-item nav-link" href="{% url 'blog-about' %}">About</a> -->
             </div>
             <!-- Navbar Right Side -->
             <div class="navbar-nav">
               {% if user.is_authenticated %}
                 {% if user.is_staff %}
+                  <a class="nav-item nav-link" href="/admin/">admin</a>
                   <a class="nav-item nav-link" href="{% url 'logout' %}">Logout</a>
                   <a class="nav-item nav-link" href="{% url 'profile' %}">Profile</a>
                   <a class="nav-item nav-link" href="{% url 'catalogo' %}">Catalogo</a>
-                  <a class="nav-item nav-link" href="{% url 'solicitud' %}">Solicitud de adopción</a>
                   <a class="nav-item nav-link" href="{% url 'listado_solicitantes' %}">Listado Solicitantes</a>
                 {% else %}
                   <a class="nav-item nav-link" href="{% url 'logout' %}">Logout</a>
@@ -58,7 +57,7 @@
 
   
     <main role="main" class="container">
-
+      <div class="content-section">
 
             {% if messages %}
             {% for message in messages %}
