--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -2,5 +2,8 @@
 {% block content %}
 <h1>Refugio el milaneso feliz</h1>
 
-
+<body>
+    Nuestra visión es poder encontrarle un hogar a todos los perritos en nuestro albergue.
+    Ayudanos a lograr nuestra meta de darle felicidad a todos los lomitos!
+</body>
 {% endblock content %}
