--- a/users/templates/users/listado_solicitantes.html
+++ b/users/templates/users/listado_solicitantes.html
@@ -14,6 +14,7 @@
         <th scope="col">Domicilio</th>
         <th scope="col">Numero de mascotas</th>
         <th scope="col">Razones</th>
+        <th scope="col">Estado de solicitud </th>
       </tr>
     </thead>
     <tbody>
@@ -26,6 +27,7 @@
                 <td>{{SolicitudAdop.Domicilio}}</td>
                 <td>{{SolicitudAdop.NumeroMasc}}</td>
                 <td>{{SolicitudAdop.Razones}}</td>
+                <td>{{SolicitudAdop.Aprobado}}</td>
             </tr>
         {% endfor %}
 
