--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -45,7 +45,7 @@
                 {% endif %}
               {% else %}
                 <a class="nav-item nav-link" href="{% url 'solicitud' %}">Solicitud de adopción</a>
-                <a class="nav-item nav-link" href="{% url 'login' %}">Login</a>
+                <a class="nav-item nav-link" href="/detect/">Login</a>
                 <a class="nav-item nav-link" href="{% url 'catalogo' %}">Catalogo</a>
                 <a class="nav-item nav-link" href="{% url 'register' %}">Register</a>
               {% endif %}
