--- a/users/templates/users/logout.html
+++ b/users/templates/users/logout.html
@@ -3,7 +3,7 @@
     <h2>You have been logged </h2>
     <div class="border-top pt-3">
         <small class="text-muted">
-            <a  href="{% url 'login' %}">
+            <a  href="/detect/">
             Log In Again    
             </a>
         </small>
